@@ -331,7 +331,13 @@ array_sort
 
  NOTES
   The underlying sorting algorithm is based upon merge-sort.  This is a
-  stable sorting algorithm that preserves the order equal elements.
+  stable sorting algorithm that preserves the order of equal elements.
+  Because of this, the following two statments may not produce the
+  same results:
+
+     i = array_sort (a; dir=-1);
+     i = array_reverse (array_sort (a; dir=1));
+
 
  SEE ALSO
   strcmp, list_to_array
